# MinecraftForFree

./: CMakeLists.txt  README.md
src/: dllmain.cpp  headers.hpp
src/utils/: detour.hpp
src/vcproxy/: vcruntime.cpp  vcruntime.hpp
